--- a/src/App.css
+++ b/src/App.css
@@ -10,10 +10,12 @@
 }
 
 .container {
-    background-color: var(--Color1);
+    background-color: #ccc;
     width: 100vw;
     height: 100vh;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
+    gap: 12px;
+ 
 }
