--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -9,6 +9,15 @@
     box-sizing: border-box;
 }
 
+.container-login {
+    background-color: var(--Color1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+}
+
 .login-content {
     background-color: var(--White);
     display: flex;
@@ -29,5 +38,16 @@ form {
     flex-direction: column;
     justify-content: center;
     align-content: space-between;
-    gap:0.7rem;
+}
+
+.signup {
+    color: var(--Color1);
+    font-size: 1rem;
+    font-weight: 500;
+    text-align: center;
+}
+
+.signup span {
+    font-weight: bold;
+    cursor: pointer;
 }
