--- a/src/styles/styles.module.css
+++ b/src/styles/styles.module.css
@@ -2,6 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    
 }
 :root {
     --Color1: #3B1C32;
@@ -17,6 +19,7 @@
     font-weight: 500;
     border-radius: 6px;
     transition: background-color 0.3s ease-in-out;
+    cursor: pointer;
 }
 
 .primarybtn {
@@ -45,15 +48,17 @@
 .header {
     text-align: center;
     font-size: 2rem;
+    font-weight: bold;
+    color: var(--Color2);
 }
 
 .wrapper {
-    margin-bottom: 1.5rem;
+    margin-bottom: 1rem;
   }
   
   .inputGroup {
     position: relative;
-    margin-top: 1.5rem;
+   
   }
   
   .inputField {
@@ -126,9 +131,13 @@
     padding: 20px;
     width: 90%;
     max-width: 500px;
+    height: 450px;
     border-radius: 8px;
     position: relative;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
   }
   
   .modalClose {
@@ -145,10 +154,71 @@
     margin-bottom: 15px;
     font-size: 20px;
     font-weight: bold;
+
   }
   
   .modalBody {
     font-size: 16px;
   }
+
+  /*SIDEBAR*/
+
+  .sidebarContainer {
+    width: 100vw;
+    background-color: var(--Color2);
+    color: var(--White);
+    height: 65px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.navbarContent {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  max-width: 1000px;
+}
+
+.logo {
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-align: center;
+    background-color: var(--Color1);
+    color: var(--White);
+    padding: 1rem;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.navMenu ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    padding: 1rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 10px;
+    
+}
+
+.navMenu li {
+    margin: 1rem 0;
+}
+
+.navMenu a {
+    text-decoration: none;
+    color: white;
+    transition: color 0.3s;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.navMenu a:hover {
+  color: var(--Color3);
+  font-weight: 500;
+  border-radius: 50px;
+}
+
   
   
