--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -37,7 +37,7 @@
 }
 form {
     height: 100%;
-    max-height: 350px;
+    min-height: 350px;
     display: flex;
     flex-direction: column;
     justify-content: center;
